Makes text show up correctly in header on mobile

--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -72,7 +72,7 @@ header {
 
             a {
                 width: 100%;
-                display: block;
+                display: inline-block;
             }
 
             > li {
@@ -83,9 +83,6 @@ header {
                 text-align: center;
                 margin-bottom: 4px;
                 padding: 4px 0px 4px;
-                &:last-child{
-                    margin-bottom: 0;
-                }
             }
         }
     }
